# spotifyarch

./: Cargo.toml
src/: auth.rs  config.rs  lib.rs  main.rs  spotify.rs  token.rs  utils.rs
src/cli/: mod.rs
src/client/: handlers.rs  mod.rs  spotify.rs
src/config/: mod.rs
src/event/: mod.rs
src/state/: data.rs  mod.rs  model.rs
src/state/ui/: mod.rs  page.rs
src/ui/: mod.rs  page.rs  playback.rs  utils.rs
